--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link href="img/logo/logo.png" rel="icon">
-  <title>RuangAdmin - Register</title>
+  <title>Login</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -17,55 +17,47 @@
 </head>
 
 <body class="bg-gradient-login">
-  <!-- Register Content -->
+  <!-- Login Content -->
   <div class="container-login">
     <div class="row justify-content-center">
-      <div class="col-xl-10 col-lg-12 col-md-9">
+      <div class="col-xl-6 col-lg-12 col-md-9">
         <div class="card shadow-sm my-5">
           <div class="card-body p-0">
             <div class="row">
               <div class="col-lg-12">
                 <div class="login-form">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Register</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Login</h1>
                   </div>
-                  <form>
+                  <form class="user">
                     <div class="form-group">
-                      <label>First Name</label>
-                      <input type="text" class="form-control" id="exampleInputFirstName" placeholder="Enter First Name">
-                    </div>
-                    <div class="form-group">
-                      <label>Last Name</label>
-                      <input type="text" class="form-control" id="exampleInputLastName" placeholder="Enter Last Name">
-                    </div>
-                    <div class="form-group">
-                      <label>Email</label>
                       <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp"
                         placeholder="Enter Email Address">
                     </div>
                     <div class="form-group">
-                      <label>Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword" placeholder="Password">
                     </div>
                     <div class="form-group">
-                      <label>Repeat Password</label>
-                      <input type="password" class="form-control" id="exampleInputPasswordRepeat"
-                        placeholder="Repeat Password">
+                      <div class="custom-control custom-checkbox small" style="line-height: 1.5rem;">
+                        <input type="checkbox" class="custom-control-input" id="customCheck">
+                        <label class="custom-control-label" for="customCheck">Remember
+                          Me</label>
+                      </div>
                     </div>
                     <div class="form-group">
-                      <button type="submit" class="btn btn-primary btn-block">Register</button>
+                      <a href="index.html" class="btn btn-primary btn-block">Login</a>
                     </div>
                     <hr>
                     <a href="index.html" class="btn btn-google btn-block">
-                      <i class="fab fa-google fa-fw"></i> Register with Google
+                      <i class="fab fa-google fa-fw"></i> Login with Google
                     </a>
                     <a href="index.html" class="btn btn-facebook btn-block">
-                      <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+                      <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                     </a>
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="font-weight-bold small" href="login.html">Already have an account?</a>
+                    <a class="font-weight-bold small" href="register.html">Create an Account!</a>
                   </div>
                   <div class="text-center">
                   </div>
@@ -77,7 +69,7 @@
       </div>
     </div>
   </div>
-  <!-- Register Content -->
+  <!-- Login Content -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
